# no-mask-catcher

./: .gitignore  README.md  Weddinger.md  __email__.py  employees.json  generate_employees.py  main.py  pyproject.toml  requirments.md  testing.ipynb
saved_model/: keras_metadata.pb  saved_model.pb
saved_model/variables/: variables.index
tests/: test_main.py
training_model_ipynb/: trian.ipynb
