[tool.poetry]
name = "no-mask-catcher"
version = "0.1.0"
description = ""
authors = ["abdalazez <abdalazzezzalsalahat@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
face-recognition = "^1.3.0"
opencv-python = "^4.5.2"
jupyterlab = "^3.0.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
