[tool.poetry]
name = "no-mask-catcher"
version = "0.1.0"
description = ""
authors = ["NOOR OMARI <nooromari847@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.0.16"
opencv-python = "^4.5.2"
face-recognition = "^1.3.0"
tensorflow = "^2.5.0"
requests = "^2.25.1"
playsound = "^1.2.2"
"vext.gi" = "^0.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
